fixed responsive issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,11 +32,11 @@ a:hover {
     border-radius: 10px;
 }
 .btn{
-    padding-left: 30px;
-    padding-right: 30px;
-  padding-top:13px;
-  padding-bottom: 13px;
-  font-size: 1.1rem;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top:13px;
+    padding-bottom: 13px;
+    font-size: 1rem;
 }
 a:hover {
     border: none !important;
